Updated headers and fixed the port parsing